tests/golden/err-i32-range/expected_error.txt
error: 整数リテラル `2147483648` は `i32` の範囲（-2147483648〜2147483647）に収まりません
 --> ./entry.clum:2:7
  |
2 |   値は {2147483648} です
  |       ^^^^^^^^^^
